# ambient-exporter

./: ambient-exporter.service  exporter.py  pyproject.toml
device/: code.py
device/lib/: adafruit_sht4x.mpy
